--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # web
 server.port=8080
 
+## \u6CE8\u610F\uFF1A\u9700\u786E\u4FDDAPI KEY\u73AF\u5883\u53D8\u91CF\u5DF2\u5728\u672C\u5730\u914D\u7F6E
+
 # langchain4j
 
 # 1. gpt-4o-mini
@@ -9,13 +11,13 @@ server.port=8080
 #langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
 
 # 2. deepseek
-# 2.1 百炼平台（免费额度）
+# 2.1 \u767E\u70BC\u5E73\u53F0\uFF08\u514D\u8D39\u989D\u5EA6\uFF09
 langchain4j.open-ai.chat-model.base-url=https://dashscope.aliyuncs.com/compatible-mode/v1
 langchain4j.open-ai.chat-model.api-key=${BAILIAN_API_KEY}
 langchain4j.open-ai.chat-model.model-name=deepseek-v3
 langchain4j.open-ai.chat-model.temperature=0.9
 
-# 2.2 官网（收费）
+# 2.2 \u5B98\u7F51\uFF08\u6536\u8D39\uFF09
 #langchain4j.open-ai.chat-model.base-url=https://api.deepseek.com
 #langchain4j.open-ai.chat-model.api-key=${DEEPSEEK_API_KEY}
 #langchain4j.open-ai.chat-model.model-name=deepseek-chat
@@ -26,32 +28,32 @@ langchain4j.ollama.chat-model.model-name=deepseek-r1:1.5b
 langchain4j.ollama.chat-model.temperature=0.8
 langchain4j.ollama.chat-model.timeout=PT60S
 
-# 4. 阿里百炼平台
+# 4. \u963F\u91CC\u767E\u70BC\u5E73\u53F0
 langchain4j.community.dashscope.chat-model.api-key=${BAILIAN_API_KEY}
 langchain4j.community.dashscope.chat-model.model-name=qwen-max
 
-# 应用发给大模型的请求日志和响应日志
+# \u5E94\u7528\u53D1\u7ED9\u5927\u6A21\u578B\u7684\u8BF7\u6C42\u65E5\u5FD7\u548C\u54CD\u5E94\u65E5\u5FD7
 langchain4j.open-ai.chat-model.log-requests=true
 langchain4j.open-ai.chat-model.log-responses=true
 
-#MongoDB连接配置
+#MongoDB\u8FDE\u63A5\u914D\u7F6E
 spring.data.mongodb.uri=mongodb://localhost:27017/chat_memory_db
 
-# 基本数据源配置
+# \u57FA\u672C\u6570\u636E\u6E90\u914D\u7F6E
 spring.datasource.url=jdbc:mysql://172.21.20.7:3306/aimed?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
 spring.datasource.username=user
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# 开启 SQL 日志打印
+# \u5F00\u542F SQL \u65E5\u5FD7\u6253\u5370
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-#集成阿里通义千问-通用文本向量-v3
+#\u96C6\u6210\u963F\u91CC\u901A\u4E49\u5343\u95EE-\u901A\u7528\u6587\u672C\u5411\u91CF-v3
 langchain4j.community.dashscope.embedding-model.api-key=${BAILIAN_API_KEY}
 langchain4j.community.dashscope.embedding-model.model-name=text-embedding-v3
 
-#集成阿里通义千问-流式输出
+#\u96C6\u6210\u963F\u91CC\u901A\u4E49\u5343\u95EE-\u6D41\u5F0F\u8F93\u51FA
 langchain4j.community.dashscope.streaming-chat-model.api-key=${BAILIAN_API_KEY}
 langchain4j.community.dashscope.streaming-chat-model.model-name=qwen-plus
 
-# 设置系统日志级别
+# \u8BBE\u7F6E\u7CFB\u7EDF\u65E5\u5FD7\u7EA7\u522B
 logging.level.root=info
